client/app/css/main.css
@font-face {
  font-family: 'Metropolis';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('../lib/webfonts/metropolis-all-400-normal.woff') format('woff');
}

@font-face {
  font-family: 'Metropolis';
  font-style: bold;
  font-weight: 700;
  font-display: swap;
  src: url('../lib/webfonts/metropolis-all-700-normal.woff') format('woff');
}

* {
  word-break: break-word;
  word-wrap: break-word;
  overflow-wrap: break-word;
  font-weight: normal;
  box-shadow: none;
}

html, body {
  background-color: #FFF;
  color: #1D1F2A;
  font-family: 'Metropolis', Helvetica, Arial, sans-serif;
  font-size: 16px;
  height: 100%;
  min-height: 20rem;
}

a, a:hover, a:active, a:focus {
  color: #205282;
  outline: 0;
  text-decoration: none;
}

a:hover, a.darklink,  a:active.darklink, a:focus.darklink {
  color: #5797D5;
}

a:hover.darklink {
  color: #79B0E6;
}

.visible-on-over {
  opacity: 0.2;
}

.visible-on-over:hover {
  opacity: 1;
}

#Sidebar a.active, #Sidebar a:active.active, #Sidebar a:hover.active, #Sidebar a:focus.active {
  border-bottom: 1px solid #C8D1E0;
  width: max-content;
}

[dir] p {
  margin: 0;
  padding: 0;
}

[dir] .h1, [dir] h1 {
  font-size: 1.6rem;
}

[dir] .h2, [dir] h2 {
  font-size: 1.5rem;
}

[dir] .h3, [dir] h3 {
  font-size: 1.4rem;
}

[dir] .h4, [dir] h4 {
  font-size: 1.3rem;
}

[dir] .h5, [dir] h5 {
  font-size: 1.2rem;
}

[dir] .h6, [dir] h6 {
  font-size: 1.1rem;
}

[dir] .container-fluid {
  padding: 0;
  overflow-x: hidden;
}

[dir] .nav-tabs .nav-item.show .nav-link, [dir] .nav-tabs .nav-link.active {
  color: #103253;
}

[dir] .table thead th {
  border-top: 0;
}

#PageContent {
  flex: 1 0 auto;
}

#HeaderBox, #ContentBox, #NoScript, #FooterBox, #DemoBadge, #PrivacyBadge {
  padding: 1rem;
}

#HeaderBox {
  color: #FFF;
  background-color: #3777BC;
}

#HeaderBox:after {
  clear: both;
  content: "";
  display: block;
}

#LogoBox {
  vertical-align: middle;
}

.default-logo {
  height: 2.4rem;
  width: 2.4rem;
}

[dir="ltr"] #LogoBox {
  margin: 0 0.5rem 0 0;
}

[dir="rtl"] #LogoBox {
  margin: 0 0 0 0.5rem;
}

#LogoBox img {
  max-height: 10rem;
  max-width: 20rem;
}

.contextImg, .receiverImg {
  height: 10rem;
  max-width: 20rem;
}

#TitleBox {
  display: inline-flex;
  font-size: 1.6rem;
  line-height: 1;
  font-weight: bold;
  white-space: pre-wrap;
  vertical-align: middle;
}

#LanguagePickerBox .form-control {
  width: auto;
}

#LoginStatusBox, #LanguagePickerBox .form-control {
  height: 2.2rem;
  line-height: 2.2rem;
  padding: 0 0.5rem;
}

#LoginStatusBox, #WhistleblowerLoginBox {
  color: #1D1F2A;
  background-color: #FFF;
  border-radius: 5px;
}

#FooterBox {
  background-color: #f5f7fa;
  text-align: center;
  font-size: 1rem;
}

#FooterBox a, #FooterBox a:hover, #Footerbox a:active, #FooterBox a:focus {
  font-weight: bold;
}

#MessagesConsoleBox {
  position: fixed;
  width: 20%;
  min-width: 20rem;
  z-index: 10;
  top: 1rem;
  padding: 0 1rem;
}

.Title {
  font-size: 1.2rem;
}

.receipt {
  text-align: center;
}

#PrivacyBadge {
  background-color: #1D1F24;
  color: #FFF;
}

.tab-content {
  padding-top: 1rem;
}

.preformatted {
  white-space: pre-wrap;
}

#wizardLicense {
  max-height: 20rem;
  overflow-y: scroll;
  background-color: #f5f7fa;
  border: 1px solid #c8d1e0;
  padding: 1rem;
}

.contextName, .recipientName {
  font-weight: bold;
}

.imageUpload {
  position: relative;
  border: 2px dashed #c8d1e0;
  z-index: 0;
  text-align: center;
  height: 10.4rem;
  width: 10.4rem;
  min-height: 10.4rem;
}

.imageUpload .changePictureButton {
  position: absolute;
  bottom: 1rem;
  text-align: center;
  z-index: 10;
}

.imageThumbnail, .imageUploadThumbnail, .imageUploadThumbnail img {
  height: 10rem;
  width: 10rem;
}

.imageUploadThumbnail img {
  vertical-align: middle;
  text-align: center;
  z-index: 1;
}

.LoginErrorBox, .LoginErrorBoxHomepage {
  display: inline-block;
}

.LoginErrorBox, .LoginErrorBoxHomepage {
  margin: 0.2rem;
}

.WhistleblowerSubmitBox, #WhistleblowerLoginBox {
  text-align: center;
}

#WhistleblowerLoginForm input {
  width: 14rem;
  text-align: center;
}

.recoverykeyinput {
  width: 64rem;
  text-align: center;
}

[dir='ltr'] .nested {
  padding-left: 1rem;
}

[dir='rtl'] .nested {
  padding-right: 1rem;
}

.filePreview {
  height: 12rem;
}

.imgPreview {
  height: 10rem;
  width: 10rem;
}

.imgPreview img {
  height: 100%;
  width: 100%;
}

.fileUpload {
  position: absolute;
  top: 0;
  z-index: 100;
  height: 10rem;
  width: 10rem;
  text-align: center;
  line-height: 10rem;
  border: 1px solid #c8d1e0;
}

.fileUploadIconSmall {
  position: absolute;
  font-size: 10rem;
  top: 0;
  right: 0;
}

.fileUploadIcon {
  font-size: 2rem;
}

.fileUploadProgress {
  margin-top: 1rem;
}

#Toolbar {
  margin-bottom: 1rem;
}

.modal-title {
  font-size: 1.3rem;
}

#TipList table {
  table-layout: auto;
}

#TipList th, #TipList td {
  white-space: nowrap;
  min-width: 5rem;
}

@keyframes fadeinout {
  0%,100% { opacity: 0; }
  50% { opacity: 1; }
}

.file-info-row {
  margin-top: 10px;
}

.wbfile .top-row {
  min-height: 30px;
}

.disabled-interface {
  pointer-events: none;
  user-select: none;
  background-color: #1D1F2A;
  opacity: 0.60;
  filter: alpha(opacity=0.60);
}

textarea.form-control {
  resize: vertical;
}

.textarea-btn {
  position: absolute;
  top: 2rem;
}

[dir="rtl"] .textarea-btn {
  left: 1rem;
}

[dir="ltr"] .textarea-btn {
  right: 1rem;
}

input[type="file"] {
  position: absolute;
  visibility: hidden;
  width: 1px;
  height: 1px;
}

.fa-none:before {
  content: "\2122";
  color: transparent;
}

.sup {
  vertical-align: super;
  font-size: smaller;
}

.nav, .pagination, .carousel, .card-title a {
  cursor: pointer;
}

.card {
  margin-bottom: 1rem;
}

@media (min-width: 768px) {
  .modal-lg .modal-dialog {
    width: 600px;
  }
}

.drag-drop {
  padding: 2em;
  border: 2px dashed #c8d1e0;
}

.drag-drop:hover {
  background-color: #F5F7FA;
}

.drag-over {
  border-style: solid;
}

.custom-file {
  width: auto;
}

.custom-file-label::after {
  opacity: 0;
}

#creditCard {
  width: 20rem;
}

#Sidebar a {
  display: block;
  margin-bottom: 1rem;
}

[dir] label {
  margin: 0;
}

#HomePageBox {
  text-align: center;
  font-size: 1rem;
  margin: 0 auto;
}

#NodePresentation {
  font-size: 1.2rem;
}

#NodePresentation,
#WhistleblowerSubmitBox {
  margin-bottom: 2rem;
}

#NodePresentation,
#WhistleblowingQuestion,
#WhistleblowerLoginPrompt {
  white-space: pre-wrap;
}

#WhistleblowerSubmitBox,
#WhistleblowerLoginBox {
  font-size: 1.2rem;
}

#DonationPanel {
  margin-top: 2rem;
}

#contextClarification {
  font-size: 1.2rem;
}

#contextClarification,
.contextCardDescription,
.receiverDescription,
.stepDescription,
.fieldDescription
{
  color: #1D1F2A;
  white-space: pre-wrap;
}

.fieldDescription {
  font-size: 1rem;
}

.contextCards, .receiverCards {
  position: relative;
}

.contextCard {
  cursor: pointer;
}

.contextCard, .receiverCard {
  margin-bottom: 1rem;
  padding: 1rem;
  background-color: #FFF;
  border: 1px solid #c8d1e0;
  border-radius: 5px;
  word-wrap: break-word;
}

.contextCardTitle, .receiverCardTitle {
  margin-bottom: 1rem;
}

.contextCard:hover, .receiverCard.selected {
  background-color: #5797D5;
  color: #FFF;
}

.receiverCard.disabled {
  background-color: #f2dede;
}

#selectedContext {
  font-weight: bold;
  margin-bottom: 1rem;
}

.fieldAnswerEntry {
  margin-top: 1rem;
}

.fieldAnswerEntryFirst {
  margin-top: 0px;
}

.fieldAnswerEntryLast {
  margin-bottom: 1rem;
}

.fieldAnswerEntryLabel:after {
  content:'';
  display:block;
  clear: both;
}

.submissionFieldInput {
  padding-left: 1rem;
}

#StepTitle {
  font-size: 1.2rem;
  font-weight: bold;
  margin-bottom: 1.2rem;
}

.fileName {
  word-break: break-all;
  word-wrap: break-word;
}

#MaxSelectableReceiverBox {
  margin-bottom: 1rem;
}

.code {
  color: #1D1F24;
  background: #F5F7FA;
}

#KeyCodeBox {
  background-color: #F5F7FA;
  margin: 1rem auto;
  padding: 1rem;
  width: 80%;
  text-align: center;
  font-family: monospace;
  font-weight: bold;
  border-radius: 5px;
}

[dir="ltr"] #SubmissionButtons button {
  margin: 0 1rem 0 0;
}

[dir="rtl"] #SubmissionButtons button {
  margin: 0 0 0 1rem;
}

#SubmissionErrors {
  margin-top: 1rem;
}

#FileUploadsHeader {
  font-size: 1.2rem;
  margin: 1.2rem 0;
}

.question-body {
  padding-bottom: 1rem;
}

.question .question {
  padding: 0 0 0 1rem;
}

.mapoutline {
  fill: #f5f7fa;
  stroke: #121F24;
  stroke-width: 1.5px;
}

div.tooltip {
  position: absolute;
  text-align: center;
  font: 1rem;
  background: #fff;
  border: 0px;
  font-weight: bold;
  pointer-events: none;
}

.fileButtons {
  position: absolute;
  top: 0;
  z-index: 666;
  height: 10rem;
  width: 10rem;
  padding: 1rem;
}

.fileButtons {
  text-align: right;
}
.adminConfigSection {
  margin-bottom: 1rem;
}

.configItem {
  background-color: #F5F7FA;
  border: 1px solid #c8d1e0;
  padding: 1rem;
  margin: 1rem auto;
}

#StepAddBox, #StepsEditBox, #FieldsEditBox, #ContextAdvancedSettingsBox, #SubstateEditBox {
  margin-top: 1rem
}

.addField, .addFieldFromTemplate {
  clear: both;
  margin-bottom: 1rem;
}

.field {
  position: relative;
  border: 1px solid #c8d1e0;
  margin-bottom: 1rem;
}

.editorHeader {
  background-color: #F5F7FA;
}

.fieldOption {
  margin-bottom: 1rem;
}

.selectionList {
  background-color: #fff;
  padding-top: 1rem;
  padding-bottom: 1rem;
  border: 1px solid #C8D1E0;
}

text.axis-workweek, text.axis-worktime {
  fill: #1D1F24;
}

.tos-text {
  display: block;
  padding: 1rem;
  font-family: monospace;
  font-size: 0.8rem;
  color: #1D1F2A;
  background-color: #F5F7FA;
  border: 1px solid #c8d1e0;
  max-height: 20rem;
  max-width: 80rem;
  overflow: auto;
  white-space: pre-wrap;
  word-wrap: break-word;
}

.non-default-language, .disabled-icon {
  opacity: 0.2;
}

.non-default-language:hover {
  opacity: 1;
}

.selectionList {
  list-style-type: none;
  overflow: auto;
  max-height: 8rem;
}

[dir="ltr"] .imageUpload .changePictureButton {
  left: 1rem;
}

[dir="rtl"] .imageUpload .changePictureButton {
  right: 1rem;
}

.selectedTip,
.table-striped > tbody > tr.selectedTip:nth-child(odd) > td {
  background-color: #fffcf1;
}

.tip-action-open {
  cursor: pointer;
}

.fieldAnswer {
  margin-bottom: 1rem;
}

.TipLabel {
  color: #377ABC;
}

#SearchFilter {
  margin: 0 0.4rem;
}

html[dir="rtl"] input[type=email],
html[dir="ltr"] input[type=email],
html[dir="rtl"] #creditCard,
html[dir="ltr"] #creditCard,
html[dir="rtl"] #KeyCodeBox,
html[dir="ltr"] #KeyCodeBox {
  direction: ltr;
}

[dir="rtl"] .fa, [dir="rtl"] .fas {
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
}

